--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello there</h1>
+<p>I am a fledgling programmer/web developer. Here are some projects I'm proud of:</p>
+<ul>
+    <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a></li>
+</ul>
 </body>
-</html>
