Update style and info

--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css"></style>
+    <title>SpicyCayenne</title>
+</head>
 <body>
-<h1>Hello there</h1>
+<div id="container">
+<h1>Hello There</h1>
 <p>I am a fledgling programmer/web developer. Here are some projects I'm proud of:</p>
-<ul>
-    <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a></li>
+<ul style="list-style-type: none;">
+    <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a>: A way to randomly generate a ten-card tableau for the card game Dominion. There are 514 possible cards!</li>
 </ul>
+</div>
 </body>
