--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>Hello There</h1>
 <p>I am a fledgling programmer/web developer. Here are some projects I'm proud of:</p>
 <ul style="list-style-type: none;">
-    <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a>: A way to randomly generate a ten-card tableau for the card game Dominion. There are 514 possible cards!</li>
+    <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a>: A way to randomly generate a ten-card tableau for the card game Dominion. There are 514 possible cards, which can form 3.25x10<sup>20</sup> different combinations!</li>
 </ul>
 </div>
 </body>
