--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a>: A way to randomly generate a ten-card tableau for the card game Dominion. There are 514 possible cards, which can form 3.25x10<sup>20</sup> different combinations!</li>
     <li><a href="https://codepen.io/spicycayenne/full/QYawbx">Tribute Page</a>: Project #1 for FreeCodeCamp.org's certification in responsive web design. This is a tribute page to Katherine Johnson, one of the women who made the moon landing possible by working at NASA as a computer, when computers were people instead of machines.</li>
     <li><a href="https://codepen.io/spicycayenne/full/vbRrPR">Survey Page</a>: Project #2 for FreeCodeCamp.org's certification in responsive web design. This is a survey page using HTML5 form elements, CSS Flexbox, and CSS Grid.</li>
+    <li><a href="https://codepen.io/spicycayenne/pen/wOJwoV">Product Landing Page</a>: Project #3 for FreeCodeCamp.org's certification in responsive web design. This is a mockup of a landing page for a tavern that players might visit in tabletop roleplaying games.</li>
 </ul>
 </div>
 </body>
