--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li><a href="https://codepen.io/spicycayenne/full/QYawbx">Tribute Page</a>: Project #1 for FreeCodeCamp.org's certification in responsive web design. This is a tribute page to Katherine Johnson, one of the women who made the moon landing possible by working at NASA as a computer, when computers were people instead of machines.</li>
     <li><a href="https://codepen.io/spicycayenne/full/vbRrPR">Survey Page</a>: Project #2 for FreeCodeCamp.org's certification in responsive web design. This is a survey page using HTML5 form elements, CSS Flexbox, and CSS Grid.</li>
     <li><a href="https://codepen.io/spicycayenne/pen/wOJwoV">Product Landing Page</a>: Project #3 for FreeCodeCamp.org's certification in responsive web design. This is a mockup of a landing page for a tavern that players might visit in tabletop roleplaying games.</li>
+    <li><a href="https://spicycayenne.github.io/three-sisters-action-tracker/">Three Sisters Action Tracker: never forget what actions you still have to do again</li>
 </ul>
 </div>
 </body>
