added script file, updated links and styles

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
 <div id="container">
-<h1>Hello There</h1>
-<p>I am a fledgling programmer/web developer. Here are some projects I'm proud of:</p>
-<ul style="list-style-type: none;">
-    <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a>: A way to randomly generate a ten-card tableau for the card game Dominion. There are 514 possible cards, which can form 3.25x10<sup>20</sup> different combinations!</li>
-    <li><a href="https://codepen.io/spicycayenne/full/QYawbx">Tribute Page</a>: Project #1 for FreeCodeCamp.org's certification in responsive web design. This is a tribute page to Katherine Johnson, one of the women who made the moon landing possible by working at NASA as a computer, when computers were people instead of machines.</li>
-    <li><a href="https://codepen.io/spicycayenne/full/vbRrPR">Survey Page</a>: Project #2 for FreeCodeCamp.org's certification in responsive web design. This is a survey page using HTML5 form elements, CSS Flexbox, and CSS Grid.</li>
-    <li><a href="https://codepen.io/spicycayenne/pen/wOJwoV">Product Landing Page</a>: Project #3 for FreeCodeCamp.org's certification in responsive web design. This is a mockup of a landing page for a tavern that players might visit in tabletop roleplaying games.</li>
-    <li><a href="https://spicycayenne.github.io/three-sisters-action-tracker/">Three Sisters Action Tracker: never forget what actions you still have to do again</li>
-</ul>
+    <h1>Hello There</h1>
+    <p>I'm Meg. I am a fledgling self-taught programmer/web developer. I know some HTML, CSS, Javascript, and Python. I have a lot to learn! Here are some projects I'm proud of:</p>
+    <ul style="list-style-type: none;">
+        <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a>: A way to randomly generate a ten-card tableau for the card game Dominion. There are 514 possible cards, which can form 3.25x10<sup>20</sup> different combinations!</li>
+        <li><a href="https://spicycayenne.github.io/three-sisters-action-tracker/">Three Sisters Action Tracker: </a>never forget what actions you still have to do again</li>
+    </ul>
+    <button id="funFactBtn" onclick="funFact()">See a fun fact about me!</button>
+    <div id="funFact" style="display: none;"></div>
 </div>
+<script type="text/javascript" src="script.js"></script>
 </body>
+</html>
