--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <div id="container">
     <h1>Hello There</h1>
     <p>I'm Meg. I am a fledgling self-taught programmer/web developer. I know some HTML, CSS, Javascript, and Python. I have a lot to learn! Here are some projects I'm proud of:</p>
-    <ul style="list-style-type: none;">
-        <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a>: A way to randomly generate a ten-card tableau for the card game Dominion. There are 514 possible cards, which can form 3.25x10<sup>20</sup> different combinations!</li>
-        <li><a href="https://spicycayenne.github.io/three-sisters-action-tracker/">Three Sisters Action Tracker: </a>never forget what actions you still have to do again</li>
+    <ul>
+        <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a>: A way to randomly generate a ten-card tableau for the card game Dominion. There are 514 possible cards, which can form 3.25x10<sup>20</sup> different combinations!</li><br>
+        <li><a href="https://spicycayenne.github.io/three-sisters-action-tracker/">Three Sisters Action Tracker: </a>never forget what actions you still have to do again</li><br>
     </ul>
-    <button id="funFactBtn" onclick="funFact()">See a fun fact about me!</button>
+    <button id="funFactBtn" class="btn" onclick="funFact()">See a fun fact about me!</button>
     <div id="funFact" style="display: none;"></div>
 </div>
 <script type="text/javascript" src="script.js"></script>
