--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>I'm Meg. I am a fledgling self-taught programmer/web developer. I know some HTML, CSS, Javascript, and Python. I have a lot to learn! Here are some projects I'm proud of:</p>
     <ul>
         <li><a href="https://spicycayenne.github.io/dominion-randomizer/">Dominion Randomizer</a>: A way to randomly generate a ten-card tableau for the card game Dominion. There are 514 possible cards, which can form 3.25x10<sup>20</sup> different combinations!</li><br>
-        <li><a href="https://spicycayenne.github.io/three-sisters-action-tracker/">Three Sisters Action Tracker</a>: never forget what actions you still have to do again</li><br>
+        <!--<li><a href="https://spicycayenne.github.io/three-sisters-action-tracker/">Three Sisters Action Tracker</a>: never forget what actions you still have to do again</li><br>-->
         <li><a href="https://spicycayenne.github.io/sweater-calculator/">Knit Camp sweater calculator</a>: A tool for members of knit camp to help determine what size sweater to knit based on their personal gauge and tension.</li><br>
         <li><a href="https://spicycayenne.github.io/mathChallenge/">Math Challenge game</a>: A "homework" assignment given to me by my friend Doug who is a Real Programmer, to teach me about Classes. Oooh! Aaah!</li><br>
     </ul>
